Closed
Bug 801295
Opened 13 years ago
Closed 13 years ago
mincore() call has incorrect type on tier3
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
mozilla19
| Tracking | Status | |
|---|---|---|
| firefox18 | --- | fixed |
People
(Reporter: jbeich, Unassigned)
References
Details
Attachments
(1 file, 1 obsolete file)
|
1.20 KB,
patch
|
lsblakk
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
AIX, Solaris and BSDs use char, not unsigned char
js/src/vm/Stack.cpp:839:18: error:
no matching function for call to 'mincore'
int result = mincore(base_, numBytes, vec);
^~~~~~~
/usr/include/sys/mman.h:226:5: note: candidate function not viable: no known
conversion from 'MincoreArgType *' (aka 'unsigned char *') to 'char *' for 3rd
argument
int mincore(const void *, size_t, char *);
^
Not sure
Attachment #671094 -
Flags: review?(justin.lebar+bug)
Comment 1•13 years ago
|
||
Comment on attachment 671094 [details] [diff] [review]
reorder ifdef
Please update the comment.
Attachment #671094 -
Flags: review?(justin.lebar+bug) → review+
Attachment #671094 -
Attachment is obsolete: true
Attachment #671107 -
Flags: checkin?(justin.lebar+bug)
Comment 3•13 years ago
|
||
Do you need this fixed in Aurora as well? If so, please nom the patch.
https://hg.mozilla.org/integration/mozilla-inbound/rev/34b1f3ed8113
Comment 4•13 years ago
|
||
Comment on attachment 671107 [details] [diff] [review]
reorder ifdef, v2
Just stick with checkin-needed :)
Attachment #671107 -
Flags: checkin?(justin.lebar+bug)
Updated•13 years ago
|
Keywords: checkin-needed
Comment 5•13 years ago
|
||
(In reply to Ryan VanderMeulen from comment #4)
> Just stick with checkin-needed :)
Sometimes I think we add features to bugzilla just to confuse people...
Keywords: checkin-needed
Comment 6•13 years ago
|
||
I'm not entirely sure if it was the reason why checkin? was added in the first place, but I find it most useful for situations when there are multiple patches attached to a bug and only a subset is landing at a given time. Makes it much easier to make sense of what landed when or what needs checking in. But for bugs when everything's landing at once, it doesn't serve much of a purpose.
Comment on attachment 671107 [details] [diff] [review]
reorder ifdef, v2
(In reply to Justin Lebar [:jlebar] from comment #3)
> Do you need this fixed in Aurora as well? If so, please nom the patch.
>
> https://hg.mozilla.org/integration/mozilla-inbound/rev/34b1f3ed8113
:gaston would be upset if I don't. ;)
[Approval Request Comment]
Risk to taking this patch: broken build on tier1, similar to comment #0
Attachment #671107 -
Flags: approval-mozilla-aurora?
Comment 8•13 years ago
|
||
Status: NEW → RESOLVED
Closed: 13 years ago
Flags: in-testsuite-
Resolution: --- → FIXED
Target Milestone: --- → mozilla19
Updated•13 years ago
|
Attachment #671107 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 9•13 years ago
|
||
https://hg.mozilla.org/releases/mozilla-aurora/rev/95606da2eaa0
Thanks jan for fixing it, it was on my todo :)
status-firefox18:
--- → fixed
You need to log in
before you can comment on or make changes to this bug.
Description
•