Bug 801295 - mincore() call has incorrect type on tier3 (non-Linux). r=jlebar